test core - usecase create user